2009-11-05  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in BLAS `isamax' and `idamax' benchmarks.

	* benchmarks/blas/templates/xiamax.c: Accept parameter through
	`sl_shparm', not `sl_shfparm'.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Small bug in benchmark list generation.
	
	* build-aux/genbench.sh: Fix typo and remove duplicates. 

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in BLAS `isamax' and `idamax' benchmarks.
	
	* benchmarks/blas/bench-isamax.c (work),	
	* benchmarks/blas/bench-idamax.c (work): Use `sl_sharg' instead of
	`sl_shfarg'.

2009-11-04  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	New inputs for BLAS benchmarks.

	* benchmarks/blas/asum.d1,
	* benchmarks/blas/asum.d2,
	* benchmarks/blas/asum.d3,
	* benchmarks/blas/axy.d1,
	* benchmarks/blas/axy.d2,
	* benchmarks/blas/axy.d3,
	* benchmarks/blas/dot.d1,
	* benchmarks/blas/dot.d2,
	* benchmarks/blas/dot.d3,
	* benchmarks/blas/rot.d1,
	* benchmarks/blas/rot.d2,
	* benchmarks/blas/rot.d3: Remove.

	* benchmarks/blas/data/cvv.d1,
	* benchmarks/blas/data/cvv.d10,
	* benchmarks/blas/data/cvv.d100,
	* benchmarks/blas/data/cvv.d1000,
	* benchmarks/blas/data/cvv.d10000,
	* benchmarks/blas/data/cvv.d100000,
	* benchmarks/blas/data/cvv.d2,
	* benchmarks/blas/data/cvv.d20,
	* benchmarks/blas/data/cvv.d200,
	* benchmarks/blas/data/cvv.d2000,
	* benchmarks/blas/data/cvv.d20000,
	* benchmarks/blas/data/cvv.d5,
	* benchmarks/blas/data/cvv.d50,
	* benchmarks/blas/data/cvv.d500,
	* benchmarks/blas/data/cvv.d5000,
	* benchmarks/blas/data/cvv.d50000,
	* benchmarks/blas/data/v.d1,
	* benchmarks/blas/data/v.d100,
	* benchmarks/blas/data/v.d1000,
	* benchmarks/blas/data/v.d10000,
	* benchmarks/blas/data/v.d100000,
	* benchmarks/blas/data/v.d200,
	* benchmarks/blas/data/v.d2000,
	* benchmarks/blas/data/v.d20000,
	* benchmarks/blas/data/v.d500,
	* benchmarks/blas/data/v.d5000,
	* benchmarks/blas/data/v.d50000,
	* benchmarks/blas/data/vv.d1,
	* benchmarks/blas/data/vv.d10,