@@ -72,32 +72,30 @@ sl_def(run_benchmark, void, sl_glparm(struct benchmark*, b))
   putc('\n');
 
   /* prepare intervals and lapses */
-  struct benchmark_interval ct_fixed[4];
-  struct work_measures {
-    struct benchmark_interval prepare;
-    struct benchmark_interval overall;
-    struct work_lapses wl;
-  };
-  struct work_measures *wm = 
-    (struct work_measures*)fast_malloc(sizeof(struct work_measures)*L);
+  struct s_interval *intervals;
+  intervals = (struct s_interval*)fast_calloc(4 + L + 10 * L, sizeof (struct s_interval));
+  
+  struct work_lapses wl = { 0, 0, intervals };
 
   /* prepare benchmark state and place */
 
   struct benchmark_state bs;
-  sl_place_t pid;
-
+  bs.wl = &wl;
   bs.data = 0;
+  sl_place_t pid;
+  size_t p = 0;
 
   printf("# 1. initial place allocation (ncores=%u)...", ncores);
 #if SVP_HAS_SEP
   {
-    mtperf_sample(ct_fixed[0].before);
+    mtperf_start_interval(intervals, p, -1, "sep_alloc");
     sl_create(,root_sep->sep_place|1,,,,,, root_sep->sep_alloc,
-	      sl_glarg(struct SEP*, _0, root_sep),
-	      sl_glarg(unsigned long, _1, SAL_EXACT|ncores),
+	      sl_glarg(struct SEP*, , root_sep),
+	      sl_glarg(unsigned long, , SAL_EXACT|ncores),
 	      sl_sharg(struct placeinfo*, p, 0));
     sl_sync();
-    mtperf_sample(ct_fixed[0].after);
+    mtperf_finish_interval(intervals, p++);
+
     if (!sl_geta(p)) {
       output_string("Place allocation failed!\n", 2);
       svp_abort();
@@ -108,7 +106,7 @@ sl_def(run_benchmark, void, sl_glparm(struct benchmark*, b))
     if (sep_dump) {
       puts("# SEP status dump after initial allocation:\n");
       sl_create(,root_sep->sep_place|1,,,,,, root_sep->sep_dump_info,
-		sl_glarg(struct SEP*, _2, root_sep));
+		sl_glarg(struct SEP*, , root_sep));
       sl_sync();
     }
   }
@@ -116,121 +114,71 @@ sl_def(run_benchmark, void, sl_glparm(struct benchmark*, b))
 #else
   puts("no SEP, using default place\n");
   pid = PLACE_DEFAULT;
-  ct_fixed[0] = ct_zero;
+  mtperf_empty_interval(intervals, p++, -1, "initialize");
 #endif
 
   puts("# 2. initialize...");
   if (initialize) {
-    mtperf_sample(ct_fixed[1].before);
-    sl_proccall(initialize, sl_glarg(struct benchmark_state*, _0, &bs));
-    mtperf_sample(ct_fixed[1].after);
+    mtperf_start_interval(intervals, p, -1, "initialize");
+    sl_proccall(initialize, sl_glarg(struct benchmark_state*, , &bs));
+    mtperf_finish_interval(intervals, p++);
     puts("ok\n");
   } else {
     puts("(nothing to do)\n");
-    ct_fixed[1] = ct_zero;
+    mtperf_empty_interval(intervals, p++, -1, "initialize");
   }
 
   int i;
   for (i = 0; i < L; ++i) {
     printf("# 3.%u prepare...", i+1);
     if (prepare) {
-      mtperf_sample(wm[i].prepare.before);
-      sl_proccall(prepare, sl_glarg(struct benchmark_state*, _0, &bs));
-      mtperf_sample(wm[i].prepare.after);
+      mtperf_start_interval(intervals, p, i, "prepare");
+      sl_proccall(prepare, sl_glarg(struct benchmark_state*, , &bs));
+      mtperf_finish_interval(intervals, p++);
       puts("ok\n");
     } else {
       puts("(nothing to do)\n");
-      wm[i].prepare = ct_zero;
+      mtperf_empty_interval(intervals, p++, i, "prepare");
     }
 
     printf("# 3.%u work...", i+1);
-    wm[i].wl.current_interval = 0;
-    bs.wl = &wm[i].wl;
-    mtperf_sample(wm[i].overall.before);
-    sl_create(, pid,,,,,, work, sl_glarg(struct benchmark_state*, _0, &bs));
+    wl.current_interval = p+1;
+    wl.current_iter = i;
+    mtperf_start_interval(intervals, p, i, "work");
+    sl_create(, pid,,,,,, work, sl_glarg(struct benchmark_state*, , &bs));
     sl_sync();
-    mtperf_sample(wm[i].overall.after);
+    mtperf_finish_interval(intervals, p);
+    p = wl.current_interval;
     puts("ok\n");
   }
 
   puts("# 4. results...");
   if (results && output) {
     putc('\n');
-    mtperf_sample(ct_fixed[2].before);
-    sl_proccall(output, sl_glarg(struct benchmark_state*, _0, &bs));
-    mtperf_sample(ct_fixed[2].after);
+    mtperf_start_interval(intervals, p, -1, "output");
+    sl_proccall(output, sl_glarg(struct benchmark_state*, , &bs));
+    mtperf_finish_interval(intervals, p++);
     putc('\n');
   } else {
     puts("(nothing to do)\n");
-    ct_fixed[2] = ct_zero;
+    mtperf_empty_interval(intervals, p++, -1, "output");
   }
 
   puts("# 5. teardown...");
   if (teardown) {
-    mtperf_sample(ct_fixed[3].before);
+    mtperf_start_interval(intervals, p, -1, "teardown");
     sl_proccall(teardown, sl_glarg(struct benchmark_state*, _0, &bs));
-    mtperf_sample(ct_fixed[3].after);
+    mtperf_finish_interval(intervals, p++);
     puts("ok\n");
   } else {
     puts("(nothing to do)\n");
-    ct_fixed[3] = ct_zero;
+    mtperf_empty_interval(intervals, p++, -1, "teardown");
   }
   puts("# done.\n\n");
 
   output_string("## measurements:\n", 2);
-  long report_flags = (format ? (REPORT_CSV|CSV_SEP(' ')) : REPORT_FIBRE) | REPORT_STREAM(2);
+  long report_flags = (format ? (REPORT_CSV|CSV_SEP(' ')) : (REPORT_FIBRE | FIBRE_PAD(7))) | REPORT_STREAM(2);
 
-  size_t nsamples = 4 + 2 * L;
-  for (i = 0; i < L; ++i) nsamples += wm[i].wl.current_interval;
-  
-  if (!format) {
-    output_string("[0,", 2);
-    output_uint(nsamples, 2);
-    output_string(":\n", 2);
-  }
-  if (!format) output_string("# place allocation\n",2);
-  mtperf_report_diffs(ct_fixed[0].before, ct_fixed[0].after, report_flags);
-  if (!format) output_string("# initialization\n",2);
-  mtperf_report_diffs(ct_fixed[1].before, ct_fixed[1].after, report_flags);
-  if (!format) output_string("# data output\n",2);
-  mtperf_report_diffs(ct_fixed[2].before, ct_fixed[2].after, report_flags);
-  if (!format) output_string("# tear down\n",2);
-  mtperf_report_diffs(ct_fixed[3].before, ct_fixed[3].after, report_flags);
-
-  if (!format) output_string("# prepare\n", 2);
-  for (i = 0; i < L; ++i) {
-    if (!format) { 
-      output_string("#   iteration ", 2); 
-      output_uint(i+1, 2); 
-      output_char('\n', 2);
-    }
-    mtperf_report_diffs(wm[i].prepare.before, wm[i].prepare.after, report_flags);
-  }
-  
-  if (!format) {
-    output_string("# work (", 2);
-    output_uint(L > 0 ? wm[0].wl.current_interval : 0, 2);
-    output_string(" sub-intervals defined)\n", 2);
-  }
-  for (i = 0; i < L; ++i) {
-    if (!format) { 
-      output_string("#   iteration ", 2); 
-      output_uint(i+1, 2); 
-      output_string(", overall\n", 2);
-    }
-    mtperf_report_diffs(wm[i].overall.before, wm[i].overall.after, report_flags);
-    for (int j = 0; j < wm[i].wl.current_interval; ++j) {
-      if (!format) { 
-	output_string("#   iteration ", 2); 
-	output_uint(i+1, 2); 
-	output_string(", interval ", 2);
-	output_uint(j+1, 2); 
-	output_char('\n', 2);
-      }
-      mtperf_report_diffs(wm[i].wl.intervals[j].before, wm[i].wl.intervals[j].after, report_flags);      
-    }
-  }
-  if (!format)
-    output_string("]\n", 2);
+  mtperf_report_intervals(intervals, p, report_flags);
 }
 sl_enddef
